--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,66 @@
 </head>
 
 <body>
+
+    <nav>
+    <div class="nav-wrapper">
+      <a href="#!" class="brand-logo">Kris on Code</a>
+      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="sass.html">About</a></li>
+        <li><a href="badges.html">Projects</a></li>
+        <li><a href="collapsible.html">Learn2Code</a></li>
+        <li><a href="mobile.html">Contact</a></li>
+      </ul>
+      <ul class="side-nav" id="mobile-demo">
+        <li><a href="sass.html">About</a></li>
+        <li><a href="badges.html">Projects</a></li>
+        <li><a href="collapsible.html">Learn2Code</a></li>
+        <li><a href="mobile.html">Contact</a></li>
+      </ul>
+    </div>
+    </nav>
+
+    <div class="container" style="margin-top: 25px">
+        <h2>Blog Titles Here</h2>
+        <p class="flow-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+    </div>
+
+    <footer class="page-footer">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="white-text">Foot In Mouth</h5>
+                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+              </div>
+              <div class="col l4 offset-l2 s12">
+                <h5 class="white-text">Social</h5>
+                <ul>
+                  <li><a class="grey-text text-lighten-3" href="#!">Twitter</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">GitHub</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">YouTube</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Facebook</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright">
+            <div class="container">
+            © 2017 Kris Green
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+          </div>
+        </footer>
+
       <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script type="text/javascript" src="js/materialize.min.js"></script>
+  <script>$(".button-collapse").sideNav();</script>
 </body>
 </html>
