--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,20 @@
     </nav>
 
     <div class="container" style="margin-top: 25px">
-        <h2>Blog Titles Here</h2>
+        <h2>Why is code colorful?</h2>
+        <img src="images/code3.jpg">
+        <p class="flow-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+    </div>
+
+    <div class="container" style="margin-top: 25px">
+        <h2>The best way to learn code</h2>
+        <img src="images/learn2code.png">
         <p class="flow-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
